[package]
name = "seamless_fs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/NaeCqde/seamless-fs"

[package.metadata.release]
tag-name = "v{{version}}"

[[bin]]
name = "sfs"
path = "src/main.rs"

[dependencies]
env_logger = "0.11"
envy = "0.4"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "brotli",
    "charset",
    "deflate",
    "gzip",
    "http2",
    "json",
    "macos-system-configuration",
    "rustls-tls",
    "zstd",
] }
ntex = { version = "2.0", features = ["tokio"] }
ntex-files = "2.0"
once_cell = "1.20"
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
v_htmlescape = "0.15"
humansize = "2.1.3"
walkdir = "2.5.0"
notify = "8.2.0"
dotenvy = "0.15.7"
